# better-file-logger

./: .gitignore  README.md  bump_version.py  pyproject.toml
better_file_logger/: __init__.py  better_logger.py
better_logger/: __init__.py  better_logger.py
simple_file_logger/: __init__.py
tests/: test_better_file_logger.py  test_better_logger.py  test_simple_file_logger.py
